--- a/.github/workflows/mirror-upstream-prs.yml
+++ b/.github/workflows/mirror-upstream-prs.yml
@@ -28,16 +28,16 @@ jobs:
         run: |
           git remote add upstream https://github.com/golang/go.git
           git fetch upstream
-          git checkout master
+          git checkout origin/master
 
-          # Check if master can be fast-forwarded
-          if git merge-base --is-ancestor master upstream/master; then
+          # Check if origin/master can be fast-forwarded to upstream/master
+          if git merge-base --is-ancestor origin/master upstream/master; then
             echo "✅ Fast-forwarding master to upstream/master"
-            git merge --ff-only upstream/master
+            git checkout -B master upstream/master
             git push origin master
           else
             echo "⚠️ Cannot fast-forward master - there are divergent changes"
-            echo "Local master and upstream/master have diverged"
+            echo "Local origin/master and upstream/master have diverged"
             exit 1
           fi
 
